--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -19,7 +19,6 @@
     "@repo/utils": "workspace:*",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
-    "@t3-oss/env-nextjs": "^0.13.10",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-table": "^8.13.2",
     "clsx": "^2.1.1",
@@ -27,6 +26,7 @@
     "framer-motion": "^12.25.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-email": "^5.2.3",
@@ -36,7 +36,6 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
-    "zod": "^4.3.5",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
@@ -45,6 +44,7 @@
     "@repo/config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.10.4",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "dotenv": "^17.2.3",
