--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,17 +1,19 @@
 # Code Owners
 
 # Global owners
-*       @theideaiq/maintainers
+*       @theideaiq/devs
 
 # Infrastructure
-/.github/   @theideaiq/devops
-/scripts/   @theideaiq/devops
+/.github/   @theideaiq/devs
+/scripts/   @theideaiq/devs
 
 # Apps
-/apps/web/   @theideaiq/frontend
-/apps/admin/ @theideaiq/frontend
+/apps/web/   @theideaiq/devs
+/apps/admin/ @theideaiq/devs
+/apps/droid/ @theideaiq/devs
 
 # Packages
-/packages/ui/      @theideaiq/design-system
-/packages/config/  @theideaiq/arch
-/packages/utils/   @theideaiq/arch
+/packages/ui/      @theideaiq/devs
+/packages/config/  @theideaiq/devs
+/packages/utils/   @theideaiq/devs
+/packages/env/     @theideaiq/devs
