--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "release": "turbo build && changeset publish",
     "clean": "turbo clean && rimraf node_modules",
     "audit": "pnpm audit --prod",
+    "setup": "pnpm install && pnpm fix:sync && pnpm build && pnpm db:generate",
+    "db:generate": "pnpm --filter @repo/database generate",
+    "db:push": "pnpm --filter @repo/database push",
     "db:seed": "pnpm --filter @repo/database seed"
   },
   "devDependencies": {
